# ESP32-Orchidarium

./: .gitignore  CMakeLists.txt  readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/climate/: climate_task.c  fan.c  humidifier.c
main/climate/include/: climate_task.h  fan.h  humidifier.h
main/http/daemon/include/: httpd.h
main/http/server/: http_server.c
main/http/server/fsdata/: fsdata.c
main/http/server/fsdata/fs/: index.html
main/http/server/fsdata/fs/css/: siimple.min.ice.css
main/http/server/fsdata/fs/js/: controller.js  index.js
main/led/: led_strip_rgb.c  led_strip_uwf.c  led_task.c
main/led/include/: led_strip_rgb.h  led_strip_uwf.h  led_task.h
main/time/: time_task.c
main/time/include/: time_task.h
main/udp/: udp_dns_server.c
main/utils/: i2c.c
main/utils/include/: i2c.h  types.h
main/wifi/: wifi_task.c
utils/: install-esp-idf.bat  launch-vs-code.bat
utils/ws_server/: main.js
